// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemberExpression/> should render 1`] = `
<div
  class="wrapper IdentifierDropdown test"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="select ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      <span
        class="label"
      >
        message source from address
      </span>
    </button>
    <div
      aria-hidden="true"
      class="dropdown options dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Message
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Ticket
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Shopify Last Order
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Shopify Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Magento2 Last Order
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Magento2 Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Recharge Last Subscription
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Recharge Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Smile Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<MemberExpression/> should update the dropdown on clicking a category 1`] = `
<div
  class="wrapper IdentifierDropdown test"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="select ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      <span
        class="label"
      >
        message source from address
      </span>
    </button>
    <div
      aria-hidden="true"
      class="dropdown isCategorySelected options dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <div
        class="backOption"
      >
        <span
          class="optionContent"
        >
          <i
            class="backArrow material-icons mr-1"
          >
            arrow_back
          </i>
          Shopify Last Order
        </span>
      </div>
      <div
        class="subOptions"
      >
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created date
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Financial status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Fulfillment status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Total price
        </button>
        <div
          class="subcategoryLabel"
        >
          Last Fulfillment
        </div>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created date
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Shipment status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tracking number
        </button>
        <div
          class="subcategoryLabel"
        >
          Shipping Address
        </div>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Country
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Province
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MemberExpression/> should update the rule on clicking a variable option 1`] = `
Array [
  Array [
    Object {
      "code": "if (eq(ticket.customer.integrations.shopify.last_order.fulfillment_status, null)) {
    Action('setTags', { tags: 'set' })
}",
      "code_ast": Object {
        "body": Array [
          Object {
            "alternate": null,
            "consequent": Object {
              "body": Array [
                Object {
                  "expression": Object {
                    "arguments": Array [
                      Object {
                        "loc": SourceLocation {
                          "end": Object {
                            "column": 20,
                            "line": 2,
                          },
                          "start": Position {
                            "column": 11,
                            "line": 2,
                          },
                        },
                        "raw": "'setTags'",
                        "type": "Literal",
                        "value": "setTags",
                      },
                      Object {
                        "loc": SourceLocation {
                          "end": Object {
                            "column": 37,
                            "line": 2,
                          },
                          "start": Position {
                            "column": 22,
                            "line": 2,
                          },
                        },
                        "properties": Array [
                          Object {
                            "computed": false,
                            "key": Object {
                              "loc": SourceLocation {
                                "end": Object {
                                  "column": 28,
                                  "line": 2,
                                },
                                "start": Position {
                                  "column": 24,
                                  "line": 2,
                                },
                              },
                              "name": "tags",
                              "type": "Identifier",
                            },
                            "kind": "init",
                            "loc": SourceLocation {
                              "end": Object {
                                "column": 35,
                                "line": 2,
                              },
                              "start": Position {
                                "column": 24,
                                "line": 2,
                              },
                            },
                            "method": false,
                            "shorthand": false,
                            "type": "Property",
                            "value": Object {
                              "loc": SourceLocation {
                                "end": Object {
                                  "column": 35,
                                  "line": 2,
                                },
                                "start": Position {
                                  "column": 30,
                                  "line": 2,
                                },
                              },
                              "raw": "'set'",
                              "type": "Literal",
                              "value": "set",
                            },
                          },
                        ],
                        "type": "ObjectExpression",
                      },
                    ],
                    "callee": Object {
                      "loc": SourceLocation {
                        "end": Object {
                          "column": 10,
                          "line": 2,
                        },
                        "start": Position {
                          "column": 4,
                          "line": 2,
                        },
                      },
                      "name": "Action",
                      "type": "Identifier",
                    },
                    "loc": WrappingSourceLocation {
                      "end": Object {
                        "column": 38,
                        "line": 2,
                      },
                      "start": Object {
                        "column": 4,
                        "line": 2,
                      },
                    },
                    "type": "CallExpression",
                  },
                  "loc": SourceLocation {
                    "end": Object {
                      "column": 38,
                      "line": 2,
                    },
                    "start": Position {
                      "column": 4,
                      "line": 2,
                    },
                  },
                  "type": "ExpressionStatement",
                },
              ],
              "loc": SourceLocation {
                "end": Object {
                  "column": 1,
                  "line": 3,
                },
                "start": Position {
                  "column": 82,
                  "line": 1,
                },
              },
              "type": "BlockStatement",
            },
            "loc": SourceLocation {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "start": Position {
                "column": 0,
                "line": 1,
              },
            },
            "test": Object {
              "arguments": Array [
                Object {
                  "computed": false,
                  "loc": WrappingSourceLocation {
                    "end": Object {
                      "column": 73,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 1,
                    },
                  },
                  "object": Object {
                    "computed": false,
                    "loc": WrappingSourceLocation {
                      "end": Object {
                        "column": 54,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 7,
                        "line": 1,
                      },
                    },
                    "object": Object {
                      "computed": false,
                      "loc": WrappingSourceLocation {
                        "end": Object {
                          "column": 43,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 7,
                          "line": 1,
                        },
                      },
                      "object": Object {
                        "computed": false,
                        "loc": WrappingSourceLocation {
                          "end": Object {
                            "column": 35,
                            "line": 1,
                          },
                          "start": Object {
                            "column": 7,
                            "line": 1,
                          },
                        },
                        "object": Object {
                          "computed": false,
                          "loc": WrappingSourceLocation {
                            "end": Object {
                              "column": 22,
                              "line": 1,
                            },
                            "start": Object {
                              "column": 7,
                              "line": 1,
                            },
                          },
                          "object": Object {
                            "loc": SourceLocation {
                              "end": Object {
                                "column": 13,
                                "line": 1,
                              },
                              "start": Position {
                                "column": 7,
                                "line": 1,
                              },
                            },
                            "name": "ticket",
                            "type": "Identifier",
                          },
                          "property": Object {
                            "loc": SourceLocation {
                              "end": Object {
                                "column": 22,
                                "line": 1,
                              },
                              "start": Position {
                                "column": 14,
                                "line": 1,
                              },
                            },
                            "name": "customer",
                            "type": "Identifier",
                          },
                          "type": "MemberExpression",
                        },
                        "property": Object {
                          "loc": SourceLocation {
                            "end": Object {
                              "column": 35,
                              "line": 1,
                            },
                            "start": Position {
                              "column": 23,
                              "line": 1,
                            },
                          },
                          "name": "integrations",
                          "type": "Identifier",
                        },
                        "type": "MemberExpression",
                      },
                      "property": Object {
                        "loc": SourceLocation {
                          "end": Object {
                            "column": 43,
                            "line": 1,
                          },
                          "start": Position {
                            "column": 36,
                            "line": 1,
                          },
                        },
                        "name": "shopify",
                        "type": "Identifier",
                      },
                      "type": "MemberExpression",
                    },
                    "property": Object {
                      "loc": SourceLocation {
                        "end": Object {
                          "column": 54,
                          "line": 1,
                        },
                        "start": Position {
                          "column": 44,
                          "line": 1,
                        },
                      },
                      "name": "last_order",
                      "type": "Identifier",
                    },
                    "type": "MemberExpression",
                  },
                  "property": Object {
                    "loc": SourceLocation {
                      "end": Object {
                        "column": 73,
                        "line": 1,
                      },
                      "start": Position {
                        "column": 55,
                        "line": 1,
                      },
                    },
                    "name": "fulfillment_status",
                    "type": "Identifier",
                  },
                  "type": "MemberExpression",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Object {
                      "column": 79,
                      "line": 1,
                    },
                    "start": Position {
                      "column": 75,
                      "line": 1,
                    },
                  },
                  "raw": "null",
                  "type": "Literal",
                  "value": null,
                },
              ],
              "callee": Object {
                "loc": SourceLocation {
                  "end": Object {
                    "column": 6,
                    "line": 1,
                  },
                  "start": Position {
                    "column": 4,
                    "line": 1,
                  },
                },
                "name": "eq",
                "type": "Identifier",
              },
              "loc": WrappingSourceLocation {
                "end": Object {
                  "column": 80,
                  "line": 1,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
            "type": "IfStatement",
          },
        ],
        "loc": SourceLocation {
          "end": Object {
            "column": 1,
            "line": 3,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "sourceType": "script",
        "type": "Program",
      },
      "created_datetime": "2021-01-15T15:26:02.577755+00:00",
      "deactivated_datetime": "2021-01-15T15:26:02.575404+00:00",
      "description": "Set tags",
      "event_types": "ticket-created",
      "id": 7,
      "name": "Set tags",
      "priority": 6,
      "type": "user",
      "updated_datetime": "2021-02-11T13:15:46.420156+00:00",
      "uri": "/api/rules/7/",
    },
  ],
]
`;
